added console and begin cnavas

--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,9 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.0</version>
         <configuration>
-          <release>11</release>
+          <release>16</release>
+            <source>16</source>
+            <target>16</target>
         </configuration>
       </plugin>
     </plugins>
